--- a/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboard.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pNN-wi-lvd">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Exhibitor Dashboard View Controller-->
+        <!--Exhibitor Dashboard-->
         <scene sceneID="yey-KR-yrc">
             <objects>
                 <viewController storyboardIdentifier="ExhibitorDashboardViewController" id="dpn-PI-hEg" customClass="ExhibitorDashboardViewController" customModule="Spancirfest" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,13 +18,35 @@
                         <viewLayoutGuide key="safeArea" id="pGf-rp-rNI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Exhibitor" image="dollarsign.circle.fill" catalog="system" id="TPA-dC-Amd"/>
+                    <navigationItem key="navigationItem" title="Exhibitor Dashboard" id="FTx-yb-jHg"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Vf-XO-mdx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-212" y="17"/>
+            <point key="canvasLocation" x="697.10144927536237" y="16.741071428571427"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LY2-xU-ZuH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pNN-wi-lvd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Rny-ka-pZ7">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="dpn-PI-hEg" kind="relationship" relationship="rootViewController" id="Gxk-ts-9zm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j0V-CM-DCq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-213.04347826086959" y="16.741071428571427"/>
         </scene>
     </scenes>
     <resources>
+        <image name="dollarsign.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
