Adding new event

--- a/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboard.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboard.storyboard
@@ -15,12 +15,43 @@
                     <view key="view" contentMode="scaleToFill" id="7WY-8h-6zB">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dPB-8l-8IX">
+                                <rect key="frame" x="0.0" y="763" width="414" height="50"/>
+                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="lHu-5p-4cD"/>
+                                </constraints>
+                                <state key="normal" title="Add New Event">
+                                    <color key="titleColor" systemColor="secondaryLabelColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapAddNewEventButton:" destination="dpn-PI-hEg" eventType="touchUpInside" id="CkL-gZ-Xf5"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VGF-mV-9Tu">
+                                <rect key="frame" x="0.0" y="88" width="414" height="675"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="pGf-rp-rNI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="pGf-rp-rNI" firstAttribute="trailing" secondItem="VGF-mV-9Tu" secondAttribute="trailing" id="CF8-uc-sy6"/>
+                            <constraint firstItem="pGf-rp-rNI" firstAttribute="trailing" secondItem="dPB-8l-8IX" secondAttribute="trailing" id="CLA-lP-fKN"/>
+                            <constraint firstItem="dPB-8l-8IX" firstAttribute="top" secondItem="VGF-mV-9Tu" secondAttribute="bottom" id="W3Z-Y2-Vwt"/>
+                            <constraint firstItem="pGf-rp-rNI" firstAttribute="bottom" secondItem="dPB-8l-8IX" secondAttribute="bottom" id="YWj-C4-xRV"/>
+                            <constraint firstItem="dPB-8l-8IX" firstAttribute="leading" secondItem="pGf-rp-rNI" secondAttribute="leading" id="ebP-1U-k0z"/>
+                            <constraint firstItem="VGF-mV-9Tu" firstAttribute="leading" secondItem="pGf-rp-rNI" secondAttribute="leading" id="fX0-Tt-oVU"/>
+                            <constraint firstItem="VGF-mV-9Tu" firstAttribute="top" secondItem="pGf-rp-rNI" secondAttribute="top" id="jBC-ql-4Tj"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Exhibitor" image="dollarsign.circle.fill" catalog="system" id="TPA-dC-Amd"/>
                     <navigationItem key="navigationItem" title="Exhibitor Dashboard" id="FTx-yb-jHg"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="VGF-mV-9Tu" id="unK-Ip-YK6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Vf-XO-mdx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -31,8 +62,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pNN-wi-lvd" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Rny-ka-pZ7">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rny-ka-pZ7">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -47,6 +78,12 @@
     </scenes>
     <resources>
         <image name="dollarsign.circle.fill" catalog="system" width="128" height="121"/>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
