--- a/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboardEventTableViewCell.xib
+++ b/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboardEventTableViewCell.xib
@@ -11,17 +11,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExhibitorDashboardEventTableViewCell" rowHeight="160" id="KGk-i7-Jjw" customClass="ExhibitorDashboardEventTableViewCell" customModule="Spancirfest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="366" height="160"/>
+            <rect key="frame" x="0.0" y="0.0" width="409" height="160"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="366" height="160"/>
+                <rect key="frame" x="0.0" y="0.0" width="409" height="160"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kRn-du-bVb">
-                        <rect key="frame" x="5" y="5" width="161" height="150"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kRn-du-bVb">
+                        <rect key="frame" x="5" y="5" width="204" height="150"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="8zg-FU-bZ7">
-                        <rect key="frame" x="171" y="5" width="190" height="150"/>
+                        <rect key="frame" x="214" y="5" width="190" height="150"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FT6-Oy-aNV">
                                 <rect key="frame" x="0.0" y="0.0" width="41.5" height="37.5"/>
@@ -50,7 +50,7 @@
                         </subviews>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" systemColor="linkColor"/>
+                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                 <constraints>
                     <constraint firstItem="8zg-FU-bZ7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="0yE-Kb-yyJ"/>
                     <constraint firstAttribute="trailing" secondItem="8zg-FU-bZ7" secondAttribute="trailing" constant="5" id="48O-o8-z7h"/>
@@ -70,12 +70,12 @@
                 <outlet property="nameLabel" destination="FT6-Oy-aNV" id="rnM-vU-9GK"/>
                 <outlet property="startDateLabel" destination="A8w-PI-Rsj" id="Rq1-gE-Chl"/>
             </connections>
-            <point key="canvasLocation" x="173.91304347826087" y="54.910714285714285"/>
+            <point key="canvasLocation" x="205.07246376811597" y="54.910714285714285"/>
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
