--- a/Spancirfest/Spancirfest/Modules/Visitor/Home/Home.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Visitor/Home/Home.storyboard
@@ -15,12 +15,39 @@
                     <view key="view" contentMode="scaleToFill" id="caM-0m-HM8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Z6H-zc-zrz">
+                                <rect key="frame" x="0.0" y="88" width="414" height="32"/>
+                                <segments>
+                                    <segment title="Daily"/>
+                                    <segment title="Categories"/>
+                                    <segment title="Locations"/>
+                                </segments>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="Yjj-B2-Rsd">
+                                <rect key="frame" x="0.0" y="119" width="414" height="694"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="eDD-kJ-2VW"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Z6H-zc-zrz" firstAttribute="leading" secondItem="eDD-kJ-2VW" secondAttribute="leading" id="GGb-PZ-go1"/>
+                            <constraint firstItem="Yjj-B2-Rsd" firstAttribute="leading" secondItem="eDD-kJ-2VW" secondAttribute="leading" id="S2n-WI-liX"/>
+                            <constraint firstItem="Z6H-zc-zrz" firstAttribute="top" secondItem="eDD-kJ-2VW" secondAttribute="top" id="YVa-5v-ep1"/>
+                            <constraint firstItem="eDD-kJ-2VW" firstAttribute="trailing" secondItem="Yjj-B2-Rsd" secondAttribute="trailing" id="ZPY-Ni-K6p"/>
+                            <constraint firstItem="eDD-kJ-2VW" firstAttribute="bottom" secondItem="Yjj-B2-Rsd" secondAttribute="bottom" id="dtd-3i-dub"/>
+                            <constraint firstItem="eDD-kJ-2VW" firstAttribute="trailing" secondItem="Z6H-zc-zrz" secondAttribute="trailing" id="g19-Ab-UlX"/>
+                            <constraint firstItem="Yjj-B2-Rsd" firstAttribute="top" secondItem="Z6H-zc-zrz" secondAttribute="bottom" id="xN1-2l-3o4"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="uuR-Tc-oy7"/>
-                    <navigationItem key="navigationItem" title="Home" largeTitleDisplayMode="always" id="sAH-1b-n6x"/>
+                    <navigationItem key="navigationItem" title="Home" id="sAH-1b-n6x"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="segmentedControl" destination="Z6H-zc-zrz" id="87y-7z-pCD"/>
+                        <outlet property="tableView" destination="Yjj-B2-Rsd" id="Cz4-J5-b3e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="594-GB-BEq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -31,8 +58,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="drw-xn-E98" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Ffq-EL-VW3">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ffq-EL-VW3">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
