--- a/Spancirfest/Spancirfest/Modules/Common/Event/Event.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Common/Event/Event.storyboard
@@ -440,9 +440,8 @@
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kjz-NK-EFU">
                                                 <rect key="frame" x="0.0" y="5.5" width="187" height="34"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                                <state key="normal" title="Add to favourites"/>
                                                 <connections>
-                                                    <action selector="didTapAddToFavouritesButton:" destination="t3J-gO-mqr" eventType="touchUpInside" id="5M5-Lk-zeI"/>
+                                                    <action selector="didTapAddToFollowButton:" destination="t3J-gO-mqr" eventType="touchUpInside" id="5M5-Lk-zeI"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JzE-QE-KQa">
@@ -458,8 +457,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1sT-1C-qz9">
                                         <rect key="frame" x="50" y="-150" width="314" height="280"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SiE-j8-P7l">
-                                                <rect key="frame" x="0.0" y="0.5" width="314" height="279"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SiE-j8-P7l">
+                                                <rect key="frame" x="0.0" y="1.5" width="314" height="277.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="280" id="ZST-eX-kUr"/>
                                                 </constraints>
@@ -505,6 +504,7 @@
                         <outlet property="categoryLabel" destination="PhC-CZ-dX3" id="8wH-dC-grX"/>
                         <outlet property="endDateLabel" destination="HeB-7c-wlR" id="SPH-fe-g8N"/>
                         <outlet property="eventImage" destination="SiE-j8-P7l" id="0DT-Ur-dXb"/>
+                        <outlet property="followButton" destination="Kjz-NK-EFU" id="eUe-8m-VDN"/>
                         <outlet property="imageBackgroundView" destination="1sT-1C-qz9" id="pXb-gJ-dNO"/>
                         <outlet property="locationLabel" destination="MKS-3C-jtq" id="XZQ-Zl-3gy"/>
                         <outlet property="numberOfPeopleLabel" destination="VgQ-2C-c2c" id="EX0-Up-IXI"/>
@@ -519,6 +519,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
