--- a/Spancirfest/Spancirfest/Modules/Common/EventDisplay/CollectionViewCell/EventDisplayCollectionViewCell.xib
+++ b/Spancirfest/Spancirfest/Modules/Common/EventDisplay/CollectionViewCell/EventDisplayCollectionViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCollectionViewCell" id="gTV-IL-0wX" customClass="HomeCollectionViewCell" customModule="Spancirfest" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EventDisplayCollectionViewCell" id="gTV-IL-0wX" customClass="EventDisplayCollectionViewCell" customModule="Spancirfest" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="130" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
