Map - clicking on location pin opens up events on that location

--- a/Spancirfest/Spancirfest/Modules/Common/EventDisplay/CollectionViewCell/EventDisplayCollectionViewCell.xib
+++ b/Spancirfest/Spancirfest/Modules/Common/EventDisplay/CollectionViewCell/EventDisplayCollectionViewCell.xib
@@ -26,7 +26,7 @@
                                     <constraint firstAttribute="height" constant="90" id="O1R-o6-i1k"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="hPY-cS-mbW">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="center" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="hPY-cS-mbW">
                                 <rect key="frame" x="0.0" y="105" width="130" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
