--- a/Spancirfest/Spancirfest/Modules/Visitor/Map/Map.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Visitor/Map/Map.storyboard
@@ -40,6 +40,55 @@
             </objects>
             <point key="canvasLocation" x="669.56521739130437" y="19.419642857142858"/>
         </scene>
+        <!--Map Location Events View Controller-->
+        <scene sceneID="O3c-1J-8g2">
+            <objects>
+                <viewController storyboardIdentifier="MapLocationEventsViewController" id="rbb-fc-r9H" customClass="MapLocationEventsViewController" customModule="Spancirfest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WFm-YV-1wV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mKd-x9-mb7">
+                                <rect key="frame" x="0.0" y="692" width="414" height="170"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FEa-cM-Ssk">
+                                        <rect key="frame" x="10" y="10" width="394" height="150"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="w2z-Hz-7qI">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells/>
+                                    </collectionView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="170" id="AQg-qy-D90"/>
+                                    <constraint firstAttribute="bottom" secondItem="FEa-cM-Ssk" secondAttribute="bottom" constant="10" id="Nvl-Sj-Dlk"/>
+                                    <constraint firstItem="FEa-cM-Ssk" firstAttribute="top" secondItem="mKd-x9-mb7" secondAttribute="top" constant="10" id="lgZ-Dh-nYT"/>
+                                    <constraint firstItem="FEa-cM-Ssk" firstAttribute="leading" secondItem="mKd-x9-mb7" secondAttribute="leading" constant="10" id="taf-st-rcR"/>
+                                    <constraint firstAttribute="trailing" secondItem="FEa-cM-Ssk" secondAttribute="trailing" constant="10" id="yLn-8A-Ive"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5iO-hg-LQZ"/>
+                        <constraints>
+                            <constraint firstItem="5iO-hg-LQZ" firstAttribute="trailing" secondItem="mKd-x9-mb7" secondAttribute="trailing" id="3jx-H5-CGH"/>
+                            <constraint firstItem="mKd-x9-mb7" firstAttribute="leading" secondItem="5iO-hg-LQZ" secondAttribute="leading" id="Hnk-0P-F15"/>
+                            <constraint firstItem="5iO-hg-LQZ" firstAttribute="bottom" secondItem="mKd-x9-mb7" secondAttribute="bottom" id="k3C-ln-NMw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backgroundView" destination="mKd-x9-mb7" id="Ujc-na-HS4"/>
+                        <outlet property="collectionView" destination="FEa-cM-Ssk" id="gFU-6Y-i0F"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gQS-xY-Wmt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1869" y="-1"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="TlV-VD-b1E">
             <objects>
@@ -61,6 +110,9 @@
     </scenes>
     <resources>
         <image name="paperplane.fill" catalog="system" width="128" height="118"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
