--- a/Spancirfest/Spancirfest/Modules/Visitor/Map/Map.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Visitor/Map/Map.storyboard
@@ -49,10 +49,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mKd-x9-mb7">
-                                <rect key="frame" x="0.0" y="692" width="414" height="170"/>
+                                <rect key="frame" x="0.0" y="562" width="414" height="300"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oE9-SZ-XVe">
+                                        <rect key="frame" x="10" y="15" width="394" height="29"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jgE-8Z-ASY">
+                                        <rect key="frame" x="10" y="54" width="394" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="m2a-6x-uTs"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKu-31-JnE">
+                                        <rect key="frame" x="10" y="104" width="394" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FEa-cM-Ssk">
-                                        <rect key="frame" x="10" y="10" width="394" height="150"/>
+                                        <rect key="frame" x="10" y="145" width="394" height="130"/>
                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="w2z-Hz-7qI">
                                             <size key="itemSize" width="128" height="128"/>
@@ -65,11 +86,20 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="170" id="AQg-qy-D90"/>
-                                    <constraint firstAttribute="bottom" secondItem="FEa-cM-Ssk" secondAttribute="bottom" constant="10" id="Nvl-Sj-Dlk"/>
-                                    <constraint firstItem="FEa-cM-Ssk" firstAttribute="top" secondItem="mKd-x9-mb7" secondAttribute="top" constant="10" id="lgZ-Dh-nYT"/>
-                                    <constraint firstItem="FEa-cM-Ssk" firstAttribute="leading" secondItem="mKd-x9-mb7" secondAttribute="leading" constant="10" id="taf-st-rcR"/>
-                                    <constraint firstAttribute="trailing" secondItem="FEa-cM-Ssk" secondAttribute="trailing" constant="10" id="yLn-8A-Ive"/>
+                                    <constraint firstItem="FEa-cM-Ssk" firstAttribute="top" secondItem="AKu-31-JnE" secondAttribute="bottom" constant="20" id="9dM-8V-MwF"/>
+                                    <constraint firstItem="oE9-SZ-XVe" firstAttribute="top" secondItem="mKd-x9-mb7" secondAttribute="top" constant="15" id="9hI-lR-Bd6"/>
+                                    <constraint firstAttribute="height" constant="300" id="AQg-qy-D90"/>
+                                    <constraint firstItem="jgE-8Z-ASY" firstAttribute="leading" secondItem="mKd-x9-mb7" secondAttribute="leading" constant="10" id="CZ5-c8-Q6U"/>
+                                    <constraint firstAttribute="trailing" secondItem="oE9-SZ-XVe" secondAttribute="trailing" constant="10" id="Ip2-hx-3Cf"/>
+                                    <constraint firstAttribute="trailing" secondItem="jgE-8Z-ASY" secondAttribute="trailing" constant="10" id="JY0-qf-KMx"/>
+                                    <constraint firstAttribute="bottom" secondItem="FEa-cM-Ssk" secondAttribute="bottom" constant="25" id="Kob-Qj-RtX"/>
+                                    <constraint firstItem="jgE-8Z-ASY" firstAttribute="top" secondItem="oE9-SZ-XVe" secondAttribute="bottom" constant="10" id="ROX-4Q-3Hs"/>
+                                    <constraint firstAttribute="trailing" secondItem="FEa-cM-Ssk" secondAttribute="trailing" constant="10" id="VQi-9X-n4F"/>
+                                    <constraint firstAttribute="trailing" secondItem="AKu-31-JnE" secondAttribute="trailing" constant="10" id="XGd-mc-XU2"/>
+                                    <constraint firstItem="oE9-SZ-XVe" firstAttribute="leading" secondItem="mKd-x9-mb7" secondAttribute="leading" constant="10" id="hvt-yr-29J"/>
+                                    <constraint firstItem="AKu-31-JnE" firstAttribute="leading" secondItem="mKd-x9-mb7" secondAttribute="leading" constant="10" id="p0X-Nz-ux1"/>
+                                    <constraint firstItem="FEa-cM-Ssk" firstAttribute="leading" secondItem="mKd-x9-mb7" secondAttribute="leading" constant="10" id="wr5-nu-jmd"/>
+                                    <constraint firstItem="AKu-31-JnE" firstAttribute="top" secondItem="jgE-8Z-ASY" secondAttribute="bottom" constant="20" id="xji-c8-XEu"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -83,11 +113,13 @@
                     <connections>
                         <outlet property="backgroundView" destination="mKd-x9-mb7" id="Ujc-na-HS4"/>
                         <outlet property="collectionView" destination="FEa-cM-Ssk" id="gFU-6Y-i0F"/>
+                        <outlet property="locationDescriptionLabel" destination="jgE-8Z-ASY" id="Zvt-1q-Jvo"/>
+                        <outlet property="locationTitleLabel" destination="oE9-SZ-XVe" id="yW2-Kt-MrG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gQS-xY-Wmt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1869" y="-1"/>
+            <point key="canvasLocation" x="1868.1159420289857" y="-1.3392857142857142"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TlV-VD-b1E">
