--- a/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboardEventTableViewCell.xib
+++ b/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboardEventTableViewCell.xib
@@ -18,10 +18,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kRn-du-bVb">
-                        <rect key="frame" x="5" y="5" width="204" height="150"/>
+                        <rect key="frame" x="10" y="30" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="5p9-aL-fqN"/>
+                            <constraint firstAttribute="width" constant="100" id="RsY-hI-2kt"/>
+                        </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="8zg-FU-bZ7">
-                        <rect key="frame" x="214" y="5" width="190" height="150"/>
+                        <rect key="frame" x="125" y="5" width="279" height="150"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FT6-Oy-aNV">
                                 <rect key="frame" x="0.0" y="0.0" width="41.5" height="37.5"/>
@@ -54,12 +58,10 @@
                 <constraints>
                     <constraint firstItem="8zg-FU-bZ7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="0yE-Kb-yyJ"/>
                     <constraint firstAttribute="trailing" secondItem="8zg-FU-bZ7" secondAttribute="trailing" constant="5" id="48O-o8-z7h"/>
-                    <constraint firstAttribute="bottom" secondItem="kRn-du-bVb" secondAttribute="bottom" constant="5" id="5y5-of-Hyx"/>
-                    <constraint firstAttribute="trailing" secondItem="kRn-du-bVb" secondAttribute="trailing" constant="200" id="Hny-7k-6xx"/>
-                    <constraint firstItem="8zg-FU-bZ7" firstAttribute="leading" secondItem="kRn-du-bVb" secondAttribute="trailing" constant="5" id="Xig-Iu-TLg"/>
+                    <constraint firstItem="kRn-du-bVb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="NGb-xn-WUd"/>
+                    <constraint firstItem="kRn-du-bVb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cuD-Lc-Cfv"/>
                     <constraint firstAttribute="bottom" secondItem="8zg-FU-bZ7" secondAttribute="bottom" constant="5" id="klQ-Ab-8cC"/>
-                    <constraint firstItem="kRn-du-bVb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="lTh-CF-w4v"/>
-                    <constraint firstItem="kRn-du-bVb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="o7K-V1-abu"/>
+                    <constraint firstItem="8zg-FU-bZ7" firstAttribute="leading" secondItem="kRn-du-bVb" secondAttribute="trailing" constant="15" id="yT3-40-jCI"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
